Update base.html add css and js, update home.html with code sample.

--- a/codebot/website/templates/home.html
+++ b/codebot/website/templates/home.html
@@ -4,4 +4,12 @@
 
 <h1>Hello Django!!!</h1>
 
+<pre>
+<code class='line-numbers language-python'>
+if name == "John"
+    print("Hello John")
+else:
+    print("Hello Friend")
+</code>
+</pre>
 {% endblock %}
