--- a/codebot/website/templates/home.html
+++ b/codebot/website/templates/home.html
@@ -12,4 +12,21 @@ else:
     print("Hello Friend")
 </code>
 </pre>
+<br/><br/>
+
+<form method=POST action="{% url 'home' %}">
+    {% csrf_token %}
+<div class="mb-3">
+  <textarea class="form-control" name="code" placeholder="Have A.I. Fix My Code" rows="3"></textarea>
+</div>
+<select class="form-select" aria-label="Default select example">
+  <option selected>Open this select menu</option>
+  <option value="1">One</option>
+  <option value="2">Two</option>
+  <option value="3">Three</option>
+</select>
+</br></br>
+<button type="submit" class="btn btn-secondary">Submit</button>
+
+</form>
 {% endblock %}
