--- a/codebot/website/templates/home.html
+++ b/codebot/website/templates/home.html
@@ -15,7 +15,7 @@
 <form method=POST action="{% url 'home' %}">
     {% csrf_token %}
 <div class="mb-3">
-  <textarea class="form-control" name="code" placeholder="Have A.I. Fix My Code" rows="3"></textarea>
+  <textarea class="form-control" name="code" placeholder="Have A.I. Fix My Code" rows="3">{{ code }}</textarea>
 </div>
 <select class="form-select" name="lang">
   <option selected>Select Programming Language</option>
