Add openai API request implementation, add gitignore file.

--- a/codebot/website/templates/home.html
+++ b/codebot/website/templates/home.html
@@ -2,10 +2,10 @@
 
 {% block content %}
 
-{% if code %}
+{% if response %}
 <pre>
 <code class='line-numbers language-{{lang}}'>
-{{code}}
+{{response}}
 
 </code>
 </pre>
