--- a/codebot/website/templates/suggest.html
+++ b/codebot/website/templates/suggest.html
@@ -12,7 +12,7 @@
 
 <br/><br/>
 
-<form method=POST action="{% url 'home' %}">
+<form method=POST action="{% url 'suggest' %}">
     {% csrf_token %}
 <div class="mb-3">
   <textarea class="form-control" name="code" placeholder="Have A.I. Suggest Code" rows="3">{{ code }}</textarea>
@@ -38,7 +38,7 @@ else:
 </pre>
 <br/><br/>
 
-<form method=POST action="{% url 'home' %}">
+<form method=POST action="{% url 'suggest' %}">
     {% csrf_token %}
 <div class="mb-3">
   <textarea class="form-control" name="code" placeholder="Have A.I. Suggest Code" rows="3"></textarea>
